Add aarch64-{darwin,linux}, x86_64-darwin to supported systems

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "mujmap"
 description = "JMAP integration for notmuch mail"
 authors = ["Eliza Velasquez"]
-version = "0.2.0"
+version = "0.2.0-frobware"
 license = "GPL-3.0"
 keywords = ["notmuch", "mail", "email", "jmap"]
 categories = ["command-line-utilities", "email"]
